a11y: Report QAbstractSlider orientation

Support QAccessible::Attribute::Orientation
newly introduced in a previous commit in
QAccessibleAbstractSlider, the accessible
implementation for QAbstractSlider.

This e.g. makes the orientation available
for QScrollBar. Extend an existing QScrollbar
accessibility test accordingly.

Fixes: QTBUG-140769
Change-Id: I8ac32116ed175b3b6760e5d1577e78180849e0e7
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: MohammadHossein Qanbari <mohammad.qanbari@qt.io>