src/widgets/accessible/rangecontrols.cpp
@@ -338,6 +338,22 @@ void *QAccessibleAbstractSlider::interface_cast(QAccessible::InterfaceType t)
     return QAccessibleWidgetV2::interface_cast(t);
 }
 
+QList<QAccessible::Attribute> QAccessibleAbstractSlider::attributeKeys() const
+{
+    QList<QAccessible::Attribute> keys = QAccessibleWidgetV2::attributeKeys();
+    keys.append(QAccessible::Attribute::Orientation);
+
+    return keys;
+}
+
+QVariant QAccessibleAbstractSlider::attributeValue(QAccessible::Attribute key) const
+{
+    if (key == QAccessible::Attribute::Orientation)
+        return QVariant::fromValue(abstractSlider()->orientation());
+
+    return QAccessibleWidgetV2::attributeValue(key);
+}
+
 QVariant QAccessibleAbstractSlider::currentValue() const
 {
     return abstractSlider()->value();
